[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Coin_Pattern_A.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/platform_metroidvania asset pack v1.01/tiles and background_foreground/background.png" type="Texture" id=3]
[ext_resource path="res://sprites/platform_metroidvania asset pack v1.01/tiles and background_foreground/tileset.png" type="Texture" id=4]
[ext_resource path="res://scripts/World.gd" type="Script" id=5]
[ext_resource path="res://scenes/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/TextBoard.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Spikes.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 48, 16, 0, 16, 0, 0, 48, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=4]
0/name = "tileset.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileset.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 48, 48, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tileset.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 16, 16, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[node name="World" type="Node"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 24, 144 )
z_index = 100

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 350, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
position = Vector2( 192, 50 )
scale = Vector2( 1.6, 2.125 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -458753, 2, 0, -393217, 2, 0, -327681, 2, 0, -262145, 2, 0, -196609, 2, 0, -131073, 2, 0, -65537, 2, 0, -1, 2, 0, 65535, 2, 0, 131071, 2, 0, 196607, 2, 0, 131077, 1, 0, 131118, 2, 0, 262143, 2, 0, 196626, 1, 0, 196654, 2, 0, 327679, 2, 0, 262190, 2, 0, 393215, 2, 0, 327694, 1, 0, 327726, 2, 0, 458751, 2, 0, 393262, 2, 0, 524287, 2, 0, 458762, 1, 0, 458798, 2, 0, 589823, 2, 0, 524334, 2, 0, 655359, 2, 0, 589870, 2, 0, 720895, 2, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, 0, 0, 655394, 0, 0, 655395, 0, 0, 655396, 0, 0, 655397, 0, 0, 655398, 0, 0, 655399, 0, 0, 655400, 0, 0, 655401, 0, 0, 655402, 0, 0, 655403, 0, 0, 655404, 0, 0, 655405, 0, 0, 655406, 2, 0, 786431, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0, 720916, 2, 0, 720917, 2, 0, 720918, 2, 0, 720919, 2, 0, 720920, 2, 0, 720921, 2, 0, 720922, 2, 0, 720923, 2, 0, 720924, 2, 0, 720925, 2, 0, 720926, 2, 0, 720927, 2, 0, 720928, 2, 0, 720929, 2, 0, 720930, 2, 0, 720931, 2, 0, 720932, 2, 0, 720933, 2, 0, 720934, 2, 0, 720935, 2, 0, 720936, 2, 0, 720937, 2, 0, 720938, 2, 0, 720939, 2, 0, 720940, 2, 0, 720941, 2, 0, 720942, 2, 0, 851967, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 2, 0, 786452, 2, 0, 786453, 2, 0, 786454, 2, 0, 786455, 2, 0, 786456, 2, 0, 786457, 2, 0, 786458, 2, 0, 786459, 2, 0, 786460, 2, 0, 786461, 2, 0, 786462, 2, 0, 786463, 2, 0, 786464, 2, 0, 786465, 2, 0, 786466, 2, 0, 786467, 2, 0, 786468, 2, 0, 786469, 2, 0, 786470, 2, 0, 786471, 2, 0, 786472, 2, 0, 786473, 2, 0, 786474, 2, 0, 786475, 2, 0, 786476, 2, 0, 786477, 2, 0, 786478, 2, 0, 917503, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851987, 2, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0, 851991, 2, 0, 851992, 2, 0, 851993, 2, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 2, 0, 851998, 2, 0, 851999, 2, 0, 852000, 2, 0, 852001, 2, 0, 852002, 2, 0, 852003, 2, 0, 852004, 2, 0, 852005, 2, 0, 852006, 2, 0, 852007, 2, 0, 852008, 2, 0, 852009, 2, 0, 852010, 2, 0, 852011, 2, 0, 852012, 2, 0, 852013, 2, 0, 852014, 2, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Coin_Pattern_A" parent="." instance=ExtResource( 2 )]
position = Vector2( 296, 40 )

[node name="Button" parent="." instance=ExtResource( 6 )]
position = Vector2( 128, 160 )

[node name="TextBoard" parent="." instance=ExtResource( 7 )]
position = Vector2( 96, 152 )
text = "In theory I can put anything I want in here and it should work."

[node name="TextBoard2" parent="." instance=ExtResource( 7 )]
position = Vector2( 104, 24 )
text = "This should be seperate text now!"

[node name="UI" parent="." instance=ExtResource( 10 )]

[node name="Spike-4" type="Node" parent="."]

[node name="Spikes" parent="Spike-4" instance=ExtResource( 8 )]
position = Vector2( 328, 168 )

[node name="Spikes2" parent="Spike-4" instance=ExtResource( 8 )]
position = Vector2( 344, 168 )

[node name="Spikes3" parent="Spike-4" instance=ExtResource( 8 )]
position = Vector2( 360, 168 )

[node name="Spikes4" parent="Spike-4" instance=ExtResource( 8 )]
position = Vector2( 376, 168 )

[node name="Spikes" parent="." instance=ExtResource( 8 )]
position = Vector2( 56, 152 )

[connection signal="leave_board" from="Player" to="." method="_on_Player_leave_board"]
[connection signal="on_coin_collected" from="Player" to="." method="_on_Player_on_coin_collected"]
[connection signal="on_use_board" from="Player" to="." method="_on_Player_on_use_board"]
[connection signal="on_allow_e_pressed" from="TextBoard" to="Player" method="_on_TextBoard_on_allow_e_pressed"]
[connection signal="on_allow_e_pressed" from="TextBoard2" to="Player" method="_on_TextBoard_on_allow_e_pressed"]
[connection signal="update_health" from="Spike-4/Spikes" to="." method="_on_Spikes_update_health"]
[connection signal="update_health" from="Spike-4/Spikes2" to="." method="_on_Spikes_update_health"]
[connection signal="update_health" from="Spike-4/Spikes3" to="." method="_on_Spikes_update_health"]
[connection signal="update_health" from="Spike-4/Spikes4" to="." method="_on_Spikes_update_health"]
[connection signal="update_health" from="Spikes" to="." method="_on_Spikes_update_health"]
